add edges finder

--- a/eye.ipynb
+++ b/eye.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,9 @@
     "    image /= np.max(image)\n",
     "    return image\n",
     "\n",
-    "def saveImage(image, filename):\n",
-    "    data = (image * 255).astype(np.uint8)\n",
-    "    ski.io.imsave(filename, data)\n",
+    "# def saveImage(image, filename):\n",
+    "#     data = (image * 255).astype(np.uint8)\n",
+    "#     ski.io.imsave(filename, data)\n",
     "\n",
     "def showImage(image):\n",
     "    plt.imshow(image, cmap='gray')\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -81,6 +81,162 @@
    "source": [
     "image = loadImage(filename)\n",
     "showImage(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy\n",
+    "\n",
+    "def findEdges(image):\n",
+    "\tthresh = 0.2\n",
+    "\tlist = []\n",
+    "\timage = scipy.ndimage.gaussian_filter(image, sigma=3)\n",
+    "\timage = ski.filters.sobel(image) ** 0.5\n",
+    "\tbinary = (image > thresh) * 255\n",
+    "\tbinary = np.uint8(binary)\n",
+    "\treturn binary\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contrastStretching(images):\n",
+    "\tlist = []\n",
+    "\tfor i in range(0, len(images)):\n",
+    "\t\timages[i] = ski.exposure.rescale_intensity(images[i], in_range=(0.4, 0.5))\n",
+    "\t\tlist.append(images[i])\n",
+    "\treturn list\n",
+    "\n",
+    "def contrast(image):\n",
+    "\timage = ski.exposure.equalize_hist(image)\n",
+    "\treturn image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showCurrImage(image, contrast = False, edges = False):\n",
+    "\timage = loadImage(filename)\n",
+    "\tshowImage(image)\n",
+    "\tif contrast:\n",
+    "\t\timage = contrast(image)\n",
+    "\t\tshowImage(image)\n",
+    "\tif edges:\n",
+    "\t\timage = findEdges(image)\n",
+    "\t\tshowImage(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.42224540741571065\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from skimage import io, exposure, data\n",
+    " \n",
+    "image = loadImage(filename)\n",
+    "image_minmax_scaled = exposure.rescale_intensity(image)\n",
+    "# print(\"max:\", image_minmax_scaled.max())\n",
+    "# print(\"min:\", image_minmax_scaled.min())\n",
+    "\n",
+    "# interpolacja liniowa\n",
+    "def interpolate(image):\n",
+    "\tmin, max = image.min(), image.max()\n",
+    "\tarr_subtracted = image - min  # Subtract the minimum\n",
+    "\t# array([  0,  38,  98, 203, 248], dtype=uint8)\n",
+    "\tarr_divided = arr_subtracted / (max - min)  # Divide by new max\n",
+    "\t# array([0.        , 0.15322581, 0.39516129, 0.81854839, 1.        ])\n",
+    "\tarr_multiplied = arr_divided * 255  # Multiply by dtype max\n",
+    "\t# array([  0.        ,  39.07258065, 100.76612903, 208.72983871,\n",
+    "\t#        255.        ])\n",
+    "\t# Convert dtype to original uint8\n",
+    "\tarr_rescaled = np.asarray(arr_multiplied, dtype=image.dtype)\n",
+    "\t# array([  0,  39, 100, 208, 255], dtype=uint8)\n",
+    "\treturn arr_rescaled\n",
+    "\n",
+    "average = image.mean(axis=0).mean(axis=0)\n",
+    "greyrectangle = np.zeros((image.shape[0], image.shape[1], 3), dtype=np.uint8)\n",
+    "\n",
+    "print(average)\n",
+    "\n",
+    "mask = image < average \n",
+    "for i in range(0, len(image)):\n",
+    "\tfor j in range(0, len(image[i])):\n",
+    "\t\tif image[i][j] < average:\n",
+    "\t\t\timage[i][j] = average\n",
+    "showImage(image)\n",
+    "image = findEdges(image)\n",
+    "image = interpolate(image)\n",
+    "showImage(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "# img = loadImage(filename)\n",
+    "# avg_patch = np.ones(shape=img.shape, dtype=np.uint8)*np.uint8(average)\n",
+    "\n",
+    "# indices = np.argsort(counts)[::-1]   \n",
+    "# freqs = np.cumsum(np.hstack([[0], counts[indices]/float(counts.sum())]))\n",
+    "# rows = np.int_(img.shape[0]*freqs)\n",
+    "\n",
+    "# dom_patch = np.zeros(shape=img.shape, dtype=np.uint8)\n",
+    "# for i in range(len(rows) - 1):\n",
+    "#     dom_patch[rows[i]:rows[i + 1], :, :] += np.uint8(palette[indices[i]])\n",
+    "    \n",
+    "# fig, (ax0, ax1) = plt.subplots(1, 2, figsize=(12,6))\n",
+    "# ax0.imshow(avg_patch)\n",
+    "# ax0.set_title('Average color')\n",
+    "# ax0.axis('off')\n",
+    "# ax1.imshow(dom_patch)\n",
+    "# ax1.set_title('Dominant colors')\n",
+    "# ax1.axis('off')\n",
+    "# plt.show(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import scipy\n",
+    "\n",
+    "\n",
+    "# def findEdges(images):\n",
+    "#     thresh = 0.2\n",
+    "#     list = []\n",
+    "#     for i in range(0, len(images)):\n",
+    "#         images [i] = scipy.ndimage.gaussian_filter(images[i], sigma=3)\n",
+    "#         images[i] = ski.filters.sobel(images[i]) ** 0.5\n",
+    "#         binary = (images[i] > thresh) * 255\n",
+    "#         binary = np.uint8(binary)\n",
+    "#         list.append(binary)\n",
+    "#     return list"
    ]
   }
  ],
