changes returned values to a dictionary

--- a/eye.ipynb
+++ b/eye.ipynb
@@ -465,8 +465,7 @@
     "\tshowImage(manualN, title=\"Expert model\")\n",
     "\tshowImage(vesselsN, title=\"Human retina \"+str(number))\n",
     "\n",
-    "\tstats = {}\n",
-    "\tstats['accuracy'], stats['sensitivity'], stats['specificity'], stats['precision'], stats['g_mean'], stats['w_average'], stats['c_matrix'] = get_metrics(vesselsN, manualN)\n",
+    "\tstats = get_metrics(vesselsN, manualN) \t\t# changes returned values to a dictionary\n",
     "\tshow_stats(stats)"
    ]
   },
